# -modmaster-

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
crates/hc-core/: Cargo.toml
crates/hc-core/src/: error.rs  event.rs  hook.rs  lib.rs  model.rs  source.rs
crates/hc-core/tests/: model_tests.rs
crates/hc-ipc/: Cargo.toml
crates/hc-ipc/src/: commands.rs  handlers.rs  lib.rs  state.rs  throttle.rs
crates/hc-modbus/: Cargo.toml
crates/hc-modbus/src/: adapter.rs  decoder.rs  lib.rs  transport.rs
crates/hc-modbus/tests/: integration.rs
crates/hc-runtime/: Cargo.toml
crates/hc-runtime/src/: bus.rs  fake.rs  lib.rs  runner.rs  runtime.rs
crates/hc-storage/: Cargo.toml
crates/hc-storage/src/: history.rs  lib.rs  project.rs  schema.rs
docs/requirements/: sp2-sp3-sp4.md
docs/superpowers/plans/: 2026-07-02-modbus-host-computer-sp1-part1.md  2026-07-02-modbus-host-computer-sp1-part2.md  2026-07-02-modbus-host-computer-sp1.md
docs/superpowers/specs/: 2026-07-02-modbus-host-computer-design.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/app/: init.ts
frontend/src/components/: Layout.tsx  LogWindow.tsx  RuntimeStatusBar.tsx
frontend/src/dashboard/: DashboardRuntime.tsx  LayoutEngine.tsx
frontend/src/hooks/: useTagSubscription.ts
frontend/src/ipc/: bindings.ts  client.ts
scripts/: simulator.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+13 files in other folders)
