[package]
name = "hc-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
hc-core = { path = "../hc-core" }
hc-runtime = { path = "../hc-runtime" }
hc-storage = { path = "../hc-storage" }
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "1"
