[package]
name = "hc-modbus"
version = "0.1.0"
edition = "2021"

[dependencies]
hc-core = { path = "../hc-core" }
tokio-modbus = { version = "0.16", features = ["tcp", "rtu"] }
tokio = { version = "1", features = ["full"] }
serialport = "4.3"
tokio-serial = "5"
log = "0.4"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
